added Kafka spark streaming vscode configuration for development